# surgicai-api

./: .envrc  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push-to-ecr.yml  build-image.yml  quality-checks.yml
alembic/: env.py
alembic/versions/: 1_initial_migration.py  1_initial_migration_user_model.py  1_initial_migration_user_opnote.py  2_add_opnote.py  2_add_user_timezone_preference.py  2_operative_description_field.py  3_user_last_login.py  3_user_opnote_relationship.py  4_add_template_model.py  5_apply_cascade_deletes.py  6_add_optimization_metadata.py
scripts/: create-root-user.sh  reset-volumes.sh
surgicai_api/: app.py  boto.py  config.py  extensions.py
surgicai_api/api/: __init__.py  fields.py  hijack.py  login.py  me.py  opnote.py  optimize.py  organization.py  pagination.py  router.py  template.py  transcribe.py
surgicai_api/api/admin/: hijack.py  organization.py  user.py
surgicai_api/emails/: __init__.py  handler.py  template_registrar.py
surgicai_api/models/: __init__.py  base.py  fields.py  opnote.py  organization.py  template.py  user.py
surgicai_api/services/: anonymize.py  authentication.py  default_template.txt  mfa.py  optimization.py  user.py
surgicai_api/services/openai/: note.py
surgicai_api/ssr/: package-lock.json  package.json  router.py  vite.config.mjs
surgicai_api/ssr/frontend-src/: editor_fields.js  fields.js  (+3 more)
surgicai_vocab/: compile-terms.py  surgical_terms.txt
surgicai_vocab/sources/: exclude.csv
tests/: test_user_api.py
(+28 files in other folders)
